--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>1.6.10</version>
+                <version>1.6.20</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -82,7 +82,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>1.6.10</version>
+            <version>1.6.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>1.6.20</version>
         </dependency>
     </dependencies>
 
